--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -361,12 +361,11 @@ header .mobile {
   padding: 64px 0;
   width: auto;
   background-color: #4a4a4a;
-  border: 3px solid red;
 }
 
-/* #filters-section .content {
+#filters-section .content {
   margin-bottom: 80px;
-} */
+}
 
 #filters-section .content h2 {
   font-family: 'Roboto-Bold';
@@ -393,7 +392,8 @@ header .mobile {
 
 #filters-section .images-container img {
   min-width: 0;
-  object-fit: scale-down;
+  object-position:0 0;
+  object-fit: contain;
 }
 
 @media only screen and (max-width: 760px) {
