--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -174,6 +174,7 @@ header .mobile {
   position: relative;
   background-image: url(../images/banner-landingpage.jpg);
   background-size: contain;
+  background-repeat: no-repeat;
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -394,6 +395,9 @@ header .mobile {
   min-width: 0;
   object-position:0 0;
   object-fit: contain;
+  display: block;
+  max-width: 100%;
+  margin-bottom: 64px;
 }
 
 @media only screen and (max-width: 760px) {
